2006-01-17  Martin Soto  <martinsoto@users.sourceforge.net>

	* tree/expression.py (Operation, Comparison, Equal, Different) 
	(BooleanOperation, And): Don't specify operators as parameters,
	use new node classes instead.

	* tree/rewrite.py (promoteSelect.operation) 
	(flattenSelect.operation): 
	* serql/serql.py (SelectContext.getCondition) 
	(Parser.exprFromTriple): 
	Adapt to the new node classes.

2006-01-17  Martin Soto  <martinsoto@users.sourceforge.net>

	* tree/rewrite.py (promoteSelect, flattenSelect): New
	simplification operations.

2006-01-17  Martin Soto  <martinsoto@users.sourceforge.net>

	* tree/rewrite.py (remakeExpr, treeMatchApply.operationWrapper) 
	(flattenAssoc.operation): Factor expression rebuild.

2006-01-17  Martin Soto  <martinsoto@users.sourceforge.net>

	* tree/rewrite.py (treeMatchApply): New apply operation for
	transformations that only affect a particular node type.
	(flattenAssoc): Implement based on treeMatchApply.

2006-01-17  Martin Soto  <martinsoto@users.sourceforge.net>

	* tree/rewrite.py (treeApply, flattenAssoc.operation): Return a
	tuple containing the transformed expression and a boolean value
	indicating whether the expression was changed or not.

2006-01-17  Martin Soto  <martinsoto@users.sourceforge.net>

	* tree/rewrite.py: New module for expression rewriting
	operations.

	* tree/expression.py (ExpressionNode.copyNode, Uri.copyNode) 
	(Literal.copyNode, FieldRef.copyNode, Operation.copyNode) 
	(Relation.copyNode, Optional.copyNode, Select.copyNode) 
	(Project.copyNode): Add a copyNode method to expression nodes to
	copy the main node and replace the subexpressions,

	* serql/serql.py (curry): Moved to new rewrite module.

2006-01-17  Martin Soto  <martinsoto@users.sourceforge.net>

	* tree/expression.py (NodeTypes, ExpressionNode.__slots__) 
	(ExpressionNode.__init__, getType, ExpressionNode.prettyPrint) 
	(NotSupported.__init__, Literal.__init__, Uri.__init__) 