@@ -210,20 +210,37 @@ class Select(ExpressionNode):
         return self.__class__(rel, predicate)
 
 
-class Project(ExpressionNode):
-    """A projection of a relation to certain columns."""
+class Map(ExpressionNode):
+    """Map a relational expression to a new relation based on a set of
+    scalar expressions that specify how to calculate the new field
+    values."""
 
-    __slots___ = ('columnList')
+    __slots___ = ('name')
 
-    def __init__(self, columnList):
-        super(Project, self).__init__()
+    def __init__(self, name, rel, *mappingExprs):
+        super(Map, self).__init__(rel, *mappingExprs)
 
-        self.columnList = columnList
+        self.name = name
 
-    def copyNode(self):
-        return self.__class__(self.columnList)
+    def copyNode(self, rel, *mappingExprs):
+        return self.__class__(self.name, rel, *mappingExprs)
 
     def prettyPrintAttributes(self, stream, indentLevel):
-        stream.write(' [%s]' % ', '.join(self.columnList))
+        stream.write(' "%s"' % self.name)
 
 
+class NameColumns(ExpressionNode):
+    """Give human readable names to a relation's columns."""
+
+    __slots__ = ('columnNames')
+
+    def __init__(self, columnNames, rel):
+        super(NameColumns, self).__init__(rel)
+
+        self.columnNames = columnNames
+
+    def copyNode(self, rel):
+        return self.__class__(self.columnNames, rel)
+
+    def prettyPrintAttributes(self, stream, indentLevel):
+        stream.write(' [%s]' % ', '.join(self.columnNames))
